--- a/css/site.css
+++ b/css/site.css
@@ -1,8 +1,18 @@
 :root {
-    --primary-color: #3c5291;
-    --secondary-color: #d9d9d9;
+    --primary-color: #000000;
+    --secondary-color: #ff993b;
     --dark-color: #292929;
     --white-color: #d9d9d9;
+}
+
+.logoFont {
+    font-family: ethnocentric, sans-serif;
+    font-weight: 400;
+    font-style: italic; 
+}
+
+.checklist {
+    color: var(--secondary-color);
 }
 
 body {
